objects/copado__Release__c.object
<CustomObject>
    <fields>
        <fullName>copado__Base_Branch__c</fullName>
        <description>All user story feature branches are created out of the main branch of the Deployment Flow. If a Release base branch is specified, all feature branches of user stories linked to the Release will be created out of the base branch.</description>
        <inlineHelpText>All user story feature branches are created out of the main branch of the Deployment Flow. If a Release base branch is specified, all feature branches of user stories linked to the Release will be created out of the base branch.</inlineHelpText>
        <label>Base Branch</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Completion_Date__c</fullName>
        <inlineHelpText>Update this date when the release is complete.</inlineHelpText>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Parent_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Informative field to define a parent release</inlineHelpText>
        <label>Parent Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status_Notes__c</fullName>
        <inlineHelpText>Describe the outcome of the release. If it was released, how it went? If canceled, why?</inlineHelpText>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Testing_Completed__c</fullName>
        <inlineHelpText>Update this date when all the Testing activities are completed.</inlineHelpText>
        <label>Testing Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <inlineHelpText>Update these values via the &quot;Set Version&quot; option</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Patch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Version__c</fullName>
        <description>When a Promotion linked to this Release is merged into the Main Branch of the deployment flow, Copado will tag the Main Branch with this version number. This value is typically a major (e.g. v7), minor (v7.3) or patch (v7.3.2) release.</description>
        <inlineHelpText>When a Promotion linked to this Release is merged into the Main Branch of the deployment flow, Copado will tag the Main Branch with this version number. This value is typically a major (e.g. v7), minor (v7.3) or patch (v7.3.2) release.</inlineHelpText>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoconnect__Connect_log__c</fullName>
        <label>Connect log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoconnect__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copadoconnect__Last_Synced_Date__c</fullName>
        <label>Last Synced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadoconnect__Pipeline_definition__c</fullName>
        <label>Pipeline definition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>